[gd_scene load_steps=29 format=3 uid="uid://dis2l4vh4nv7y"]

[ext_resource type="Texture2D" uid="uid://b26v60vvtdxvq" path="res://Art/Dialog_bubble_w_squiggles.png" id="1_jppxb"]
[ext_resource type="Script" path="res://UI/cutscene.gd" id="1_r0cry"]
[ext_resource type="AudioStream" uid="uid://csqancsv16jch" path="res://Sound/we_need_your_help.mp3" id="4_4h2fy"]
[ext_resource type="AudioStream" uid="uid://dqxk0r0a68itp" path="res://Sound/sob_sob.mp3" id="5_mdham"]
[ext_resource type="AudioStream" uid="uid://jwdbhq3bqfeg" path="res://Sound/oh_no_corals.mp3" id="6_l2q7v"]
[ext_resource type="AudioStream" uid="uid://cqcdr12nk48r2" path="res://Sound/wife_ded.mp3" id="7_4gdni"]
[ext_resource type="AudioStream" uid="uid://crd8vns2su11b" path="res://Sound/mumble.mp3" id="8_umpyt"]
[ext_resource type="AudioStream" uid="uid://d1x70a8dn6x1m" path="res://Sound/kill_humans.mp3" id="9_djdio"]
[ext_resource type="AudioStream" uid="uid://diadrhn4rt8dj" path="res://Sound/only_hope.mp3" id="10_2jopt"]
[ext_resource type="Texture2D" uid="uid://f0o5ine4do2c" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1427.png" id="10_ayytl"]
[ext_resource type="Texture2D" uid="uid://iiwx31h15ke7" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1428.png" id="11_lq2r3"]
[ext_resource type="Texture2D" uid="uid://8trwi8m4jng2" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1429.png" id="12_miltj"]
[ext_resource type="Texture2D" uid="uid://ugltmtd86cb2" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1430.png" id="13_1n0ve"]
[ext_resource type="Texture2D" uid="uid://bu1nk40nwqdqv" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1431.png" id="14_1m28s"]
[ext_resource type="Texture2D" uid="uid://cej3c12ds8gv0" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1432.png" id="15_xef3a"]
[ext_resource type="Texture2D" uid="uid://bp85vwtwpa70c" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1433.png" id="16_81jhl"]
[ext_resource type="Texture2D" uid="uid://c1e5kq5epnx32" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1434.png" id="17_4rapr"]
[ext_resource type="Texture2D" uid="uid://dnt8mp1mvydic" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1435.png" id="18_uauu6"]
[ext_resource type="Texture2D" uid="uid://dxnuf26e672px" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1436.png" id="19_1ayu0"]
[ext_resource type="Texture2D" uid="uid://dam8o0378u5gr" path="res://Art/Assets/Cutscenes/Blob-animation/IMG_1437.png" id="20_7bix7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbdna"]
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g48am"]
bg_color = Color(0.627451, 0.560784, 0.74902, 1)

[sub_resource type="Theme" id="Theme_4fwya"]
TextEdit/colors/font_color = Color(0.539063, 0.628906, 0.6875, 1)
TextEdit/colors/font_outline_color = Color(1, 1, 1, 1)
TextEdit/styles/normal = SubResource("StyleBoxFlat_kbdna")
TextEdit/styles/read_only = SubResource("StyleBoxFlat_g48am")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1skv2"]
bg_color = Color(0, 0, 0, 0.231373)

[sub_resource type="Theme" id="Theme_o0ti2"]
Button/styles/hover = SubResource("StyleBoxFlat_1skv2")
Button/styles/normal = SubResource("StyleBoxFlat_1skv2")
Button/styles/pressed = SubResource("StyleBoxFlat_1skv2")

[sub_resource type="Animation" id="Animation_a20of"]
resource_name = "Sad"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8k565"]
_data = {
"Sad": SubResource("Animation_a20of")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_cxdk2"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("10_ayytl")
}, {
"duration": 2.0,
"texture": ExtResource("11_lq2r3")
}, {
"duration": 2.0,
"texture": ExtResource("12_miltj")
}, {
"duration": 2.0,
"texture": ExtResource("13_1n0ve")
}, {
"duration": 2.0,
"texture": ExtResource("14_1m28s")
}, {
"duration": 2.0,
"texture": ExtResource("15_xef3a")
}, {
"duration": 2.0,
"texture": ExtResource("16_81jhl")
}, {
"duration": 2.0,
"texture": ExtResource("17_4rapr")
}, {
"duration": 2.0,
"texture": ExtResource("18_uauu6")
}, {
"duration": 2.0,
"texture": ExtResource("19_1ayu0")
}, {
"duration": 2.0,
"texture": ExtResource("20_7bix7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="$Audio2_play()" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_r0cry")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 5
offset_left = 332.0
offset_top = 270.0
offset_right = 3532.0
offset_bottom = 3470.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_jppxb")

[node name="Name" type="TextEdit" parent="."]
z_index = 15
offset_left = 371.0
offset_top = 348.0
offset_right = 505.0
offset_bottom = 404.0
theme = SubResource("Theme_4fwya")
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 22
text = "Name"
placeholder_text = "Name"

[node name="Dialoge" type="TextEdit" parent="."]
z_index = 15
offset_left = 392.0
offset_top = 406.0
offset_right = 765.0
offset_bottom = 606.0
theme = SubResource("Theme_4fwya")
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 22
text = "We need your help!"
placeholder_text = "Name"
wrap_mode = 1

[node name="Button" type="Button" parent="."]
offset_left = -97.0
offset_top = -80.0
offset_right = 1264.0
offset_bottom = 734.0
theme = SubResource("Theme_o0ti2")

[node name="need_help" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4h2fy")
pitch_scale = 0.89

[node name="sob_sob" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mdham")

[node name="coral_reef_be_dying" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_l2q7v")

[node name="wife_ded" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4gdni")

[node name="angry_mumble" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_umpyt")

[node name="kill_humans_hehe" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_djdio")

[node name="only_hope" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_2jopt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8k565")
}

[node name="Blobfish" type="AnimatedSprite2D" parent="."]
position = Vector2(559, 89)
scale = Vector2(0.24, 0.24)
sprite_frames = SubResource("SpriteFrames_cxdk2")
frame_progress = 0.530097

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
